[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/Stages/Stage/stage_back.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Stages/Stage/stage_curtains.png" type="Texture" id=2]
[ext_resource path="res://Scripts/States/multi_state.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Stages/Stage/stage_front.png" type="Texture" id=4]
[ext_resource path="res://Scenes/States/Multiplayer/MultiState/Buttons/PlayerButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/States/Multiplayer/MultiState/Buttons/GameButton.tscn" type="PackedScene" id=6]

[node name="MultiState" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.6, 1.6 )
smoothing_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 0.9 )

[node name="StageBack" type="Sprite" parent="ParallaxBackground/Background"]
texture = ExtResource( 1 )

[node name="Stage" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.95, 0.95 )

[node name="StageFront" type="Sprite" parent="ParallaxBackground/Stage"]
position = Vector2( 0, 448 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 4 )

[node name="Buttons" type="Node2D" parent="."]

[node name="PlayerButton" parent="Buttons" instance=ExtResource( 5 )]
position = Vector2( 458, 317 )

[node name="GameButton" parent="Buttons" instance=ExtResource( 6 )]
position = Vector2( -555, 234 )

[node name="ParallaxForeground" type="ParallaxBackground" parent="."]
layer = 1

[node name="Foreground" type="ParallaxLayer" parent="ParallaxForeground"]
motion_scale = Vector2( 1.5, 1.5 )

[node name="StageCurtains" type="Sprite" parent="ParallaxForeground/Foreground"]
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )

[connection signal="pressed" from="Buttons/PlayerButton" to="." method="_on_PlayerButton_pressed"]
[connection signal="pressed" from="Buttons/GameButton" to="." method="_on_GameButton_pressed"]
